--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -464,14 +464,8 @@ a,button , .maxtop .maxmenu li a{
     cursor: pointer;
 }
 
-.global-alerts .alert-danger{
+.global-alerts .alert-danger , .global-alerts .alert-warning , .global-alerts .alert-info{
     text-align: center;
-    background:#7ead94;
-    border:none;
-    color: #fff;
-}
-.alert-dismissable .close:hover, .alert-dismissible .close:hover{
-    color: #fff;
 }
 
 #cboxContent .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary{
