--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -478,6 +478,12 @@ a,button , .maxtop .maxmenu li a{
         padding:0; 
         margin:0;
     }
+    .search-list-page-right-result-list-slot{
+        margin:0;
+    }
+    .search-list-page-right-result-list-component{
+        padding:0;
+    }
    
 }
 @media (max-width: 1023px){
