--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
@@ -70,10 +70,10 @@ Mar 09, 2018</font></font></b></font></p>
 </p>
 
 	<p class="western" align="left"  style="text-indent: 2.01in"><font face="Arial, sans-serif"><font size="2" style="font-size: 10pt">
-		<b>CONTACT:${ctx.contactUser}</b></font></font></p>
+		<b>CONTACT:$!{ctx.contactUser}</b></font></font></p>
 	<p class="western" align="left"  style="text-indent: 2.01in">
 		<font face="Arial, sans-serif"><font size="2" style="font-size: 10pt">
-		<b>TEL:${ctx.contactMobile}</b></font></font></p>
+		<b>TEL:$!{ctx.contactMobile}</b></font></font></p>
 <p align="justify" style="margin-right: -0.05in; font-weight: normal">
 <br/>
 
