--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -266,7 +266,7 @@ textarea{
 	overflow: hidden;
 }
 
-.maxon_salesul .slide-item .aitem{
+.maxon_salesul .slide-item .aitem , .maxon_salesul .slide-item .item{
 	padding-right:20px;
 	width:20%;
 	float:left;
@@ -2539,7 +2539,14 @@ display: inline-table;
 	color: #666;
 }
 .prod-cont .prodbase .g-title .mintitle{
+	display:-webkit-box;
 	margin-right: 80px;
+	max-height: 50px;
+	overflow:hidden;
+	text-overflow:ellipsis;
+	-webkit-box-orient:vertical;
+	-webkit-line-clamp:2;
+
 }
 .prod-cont.down-cont{
 	padding-bottom: 40px
@@ -2576,7 +2583,7 @@ display: inline-table;
 }
 
 .prod-cont .prodbase .Summary{
-	padding:20px 0;
+	padding:16px 0;
 	border-top:1px solid #ddd;
 }
 .prod-cont .prodbase .Summary span{
@@ -2599,7 +2606,7 @@ display: inline-table;
 }
 .prod-cont .prodbase .specnum{
 	position: relative;
-	padding-top: 20px;
+	padding-top: 16px;
 	border-top:1px solid #ddd;
 }
 
@@ -2641,16 +2648,17 @@ display: inline-table;
 }
 .prod-cont .prodbase .label-title{
 	display: block;
-	margin-bottom: 10px;
+	margin-bottom: 2px;
+}
+.prod-cont .prodbase  select{
+	height: 30px;
+	line-height: 30px;
 }
 
 .prod-cont .prodbase .invernum{
 	position: relative;
 }
 
-.prod-cont .prodbase .inventory{
-	margin-top: 20px;
-}
 .prod-cont .prodbase .inventory i{
 	margin:0 6px;
 }
@@ -2658,7 +2666,7 @@ display: inline-table;
 	display: none;
 }
 .prod-cont .prodbase .prod-sum{
-	margin-top:20px;
+	margin-top:16px;
 }
 .prod-cont .prodbase .delintro{
 	padding-left: 10px;
@@ -2711,7 +2719,7 @@ display: inline-table;
 }
 
 .prod-cont .prodbase .delivery{
-	margin:20px auto;
+	margin:16px auto;
 }
 .prod-cont .prodbase .delivery:after{
 	display: block;
@@ -2807,6 +2815,9 @@ display: inline-table;
 .prod-cont .product-right .tableshare a:hover{
 	background-image: url(sharecolor.png);
 }
+.prod-cont .g-proudtable{
+
+}
 
 .g-proudtable span , .prod-cont .g-desclist li{
 	color: #666;
@@ -2822,6 +2833,8 @@ display: inline-table;
 .prod-cont .g-descblock{
 	padding:40px 0;
 	border-top:1px solid #ddd;
+	width: 48%;
+	float: left;
 }
 .prod-cont .g-descblock .title{
 	padding-left: 20px;
@@ -2850,6 +2863,11 @@ display: inline-table;
 }
 .prod-cont .descr{
 	display: block;
+}
+.prod-cont .descr:after{
+	content:'';
+	display: block;
+	clear: both;
 }
 
 .m-revlist li{
