--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -269,12 +269,10 @@ textarea{
 
 .maxon_salesul .slide-item .aitem , .maxon_salesul .slide-item .item{
 	padding-right:20px;
-	width:20%;
+	/*width:20%;*/
 	float:left;
+	display: inline-block;
 }
- .maxon_salesul .slide-item .item .img{
- 	padding:6%;
- }
 
 .maxon_salesul .slide-item .maxtext p{
 	display: -webkit-box;
@@ -2844,7 +2842,7 @@ display: inline-table;
 }
 
 .prod-cont .g-descblock .g-table{
-	width: 500px;
+	max-width: 500px;
 }
 .prod-cont .g-descblock .g-table li{
 	padding:10px 0;
