--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-forgottenPasswordBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-forgottenPasswordBody.vm
@@ -1,92 +1,61 @@
 ## messageSource=classpath:/acerchemcore/messages/email-forgottenPassword_$lang.properties
-#macro(genHtmlLinkStartTag $url)
-<a href="$url"><font color="#666666">
-#end
-#macro(genHtmlLinkEndTag)
-</font></a>
-#end
-#macro(genHtmlLink $url $textColor $bodyContent)
-<a href="$url"><font color="$textColor">$bodyContent</font></a>
-#end
-
+<!doctype html>
 <html>
-	<head>
-	</head>
-	<body bgcolor="#ffffff"
-	<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
-		<tr>
-			<td>&nbsp;</td>
+<head>
+<meta charset="utf-8">
+<title>Forget the password</title>
+<style type="text/css">
+	@page {
+	margin-right: 0.79in;
+	margin-top: 0.59in;
+	margin-bottom: 0.47in
+}
+	.font{
+		font-family:arial;
+		font-size: 12px;
+		border-color: #000000
+		
+	}
+	</style>
+</head>
+
+<body>
+<center>
+	<table class="font" width="600px" height="300px" frame="void">
+	<tbody>
+		<tr height="30px">
+			<td bgcolor="#006000">&nbsp;
+				
+			</td>
 		</tr>
+		
 		<tr>
-			<td align="center" valign="top">
-				<table width="610" border="0" align="center" cellpadding="0" cellspacing="0" bordercolor="#fff">
-					<tr>
-						<td align="center" valign="top" bgcolor="#FFFFFF">
-							<table width="570" cellpadding="0" cellspacing="0" border="0" align="center">
-								<tr>
-									<td valign="middle">&nbsp;</td>
-								</tr>
-								<tr>
-									<td valign="middle">
-										${ctx.cmsSlotContents.SiteLogo}
-										<img src="${ctx.themeResourceUrl}/images/header_01.png" alt="" width="229" height="72" border="0" align="right" title="" />
-									</td>
-								</tr>
-								<tr>
-									<td height="30" align="right" valign="middle" bgcolor="#000000">
-										<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.secureBaseUrl}/my-account"><font color="#FFFFFF">${ctx.messages.myAccount}</font></a> | <a href="${ctx.baseUrl}/store-finder"><font color="#FFFFFF">${ctx.messages.storeFinder}</font></a> &nbsp;&nbsp;</font>
-									</td>
-								</tr>
-								<tr>
-									<td align="center" valign="middle"><a href="${ctx.baseUrl}" style="display:block; margin-top:10px;margin-bottom:10px;">${ctx.cmsSlotContents.TopContent}</a></td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td align="left" valign="top">
-									#set ($pswdRequestUrl = "${ctx.secureRequestResetPasswordUrl}")
-									#set ($mailToUrl = "mailto:${ctx.messages.contactUsEmailAddress}")
-									#if(${ctx.baseSite.Uid} == "acerchem")
-									#set ( $paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs_acerchem', "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")} )
-									#else
-									#set ($faqPage = "${ctx.baseUrl}/faq")
-									#set ( $paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs', "#genHtmlLinkStartTag($faqPage)", "#genHtmlLinkEndTag()", "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")} )
-									#end
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.getMessage('salutation', ${ctx.title},${ctx.displayName})}</b>,</font></p>
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.sentenceAlmostDone}&nbsp;&nbsp;</font><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.sentenceUpdatePswdInstructions}:&nbsp;<a href="${ctx.secureResetPasswordUrl}"><font color="#666666">${ctx.displaySecureResetPasswordUrl}</font></a> </font></p>
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('paragraphSecurityNote', ${ctx.expiresInMinutes}, ${ctx.expiresInMinutes})}</font></p>
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('paragraphExpiredLink',"#genHtmlLinkStartTag($pswdRequestUrl)", "#genHtmlLinkEndTag()")}</font></p>
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$paragraphContactUs</font></p>
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.complimentaryClosing}</font></p>
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.signature}</font></p>
-									</td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td align="center" valign="middle">
-										<a href="${ctx.baseUrl}" style="display:block; margin-top:10px;margin-bottom:10px;">${ctx.cmsSlotContents.BottomContent}</a>
-									</td>
-								</tr>
-								<tr>
-									<td height="30" align="right" valign="middle" bgcolor="#000000">
-										<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.baseUrl}"><font color="#FFFFFF">${ctx.messages.help}</font></a> | <a href="${ctx.messages.contactUsPage}"><font color="#FFFFFF">${ctx.messages.contactUs}</font></a> | <a href="${ctx.baseUrl}"><font color="#FFFFFF">${ctx.messages.termsAndCondition}</font></a> &nbsp;&nbsp;</font>
-									</td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-							</table>
-						</td>
-					</tr>
-				</table>
+			<td>
+				<strong>${ctx.messages.getMessage('salutation', ${ctx.title},${ctx.displayName})},</strong>
 			</td>
 		</tr>
 		<tr>
-			<td>&nbsp;</td>
+			<td>
+				${ctx.messages.sentenceSetPwdInstructions}:&nbsp;&nbsp;<a href="${ctx.secureResetPasswordUrl}"><font color="
+				#006000">${ctx.displaySecureResetPasswordUrl}</font></a>
+
+				
+			</td>
 		</tr>
+		
+		<tr>
+			<td>
+				
+				${ctx.messages.contactUs_new} <a href="mailto:customerservice@acerchem.com"><font color="#006000" size="2">customerservice@acerchem.com</font></a>
+			</td>
+		</tr>
+		<tr height="30px">
+			<td bgcolor="#006000">&nbsp;
+				
+			</td>
+		</tr>
+		</tbody>
 	</table>
+</center>
 </body>
 </html>
