--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
@@ -183,7 +183,7 @@ p.western {
    			</tr>
    			<tr>
    				<td>
-   					1.Price Terms: DDP
+   					1.Delivery Terms: DDP
    				</td>
    			</tr>
    			<tr>
