--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
@@ -104,7 +104,7 @@ p.western {
       <td colspan="2" align="center">&nbsp; </td>
     </tr>
     <tr>
-      <td width="60%">INVOICE NO.: ${ctx.order.code}</td>
+      <td width="60%">S/C# ${ctx.order.code}</td>
 	  #set ($formattedOrderDate = $ctx.dateTool.format('MM/dd/yyyy', $ctx.order.created)) 
       <td>S/C date: ${formattedOrderDate}</td>
     </tr>
