--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-customerRegistrationAuditPassBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-customerRegistrationAuditPassBody.vm
@@ -44,7 +44,7 @@
 		</tr>
 		<tr>
 			<td>
-				${ctx.messages.registerSuccess}
+				${ctx.messages.thankYouForRegistering}
 				
 			</td>
 		</tr>
@@ -57,8 +57,8 @@
 		</tr>
 		<tr>
 			<td>
-			${ctx.messages.thankYouSupport}
-				
+			
+				${ctx.messages.thankYouSupport}
 				
 			</td>
 		</tr>
