--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractSubject.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractSubject.vm
@@ -1,1 +1,1 @@
-contract email
+This email is to thank you for supporting our business send you sales contract between you and Ingredients4u, please do not reply directly in this email.
