--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
@@ -96,7 +96,7 @@ p.western {
       <td>INVOICE NO.: ${ctx.order.code}</td>
       <td>&nbsp;</td>
     </tr>
-	#set ($formattedOrderDate = $ctx.dateTool.format('MM/dd/yyyy', $ctx.order.created))
+	#set ($formattedOrderDate = $ctx.order.waitDeliveiedDate)
     <tr>
       <td>DATE: ${formattedOrderDate}</td>
       <td>&nbsp;</td>
@@ -111,7 +111,7 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Tel:  ${ctx.customer.defaultPaymentAddress.phone1}</td>
+      <td>Tel:  $!{ctx.contactMobile}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
