--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
@@ -112,7 +112,7 @@ p.western {
     </tr>
     
       
-      <td>$!{ctx.customerAddressData.country}/td>
+      <td>$!{ctx.customerAddressData.country} </td>
     </tr>
     <tr>
       
