email修改客户名为客户公司名

--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
@@ -103,7 +103,7 @@ p.western {
     </tr>
     
     <tr>
-      <td>TO: ${ctx.customer.name}</td>
+      <td>TO: ${ctx.customerCompany}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
