--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
@@ -129,8 +129,8 @@ p.western {
     <tr>
       <td width="120" height="7">AC Code</td>
       <td width="180" >Name</td>
-      <td width="60" c>Unit</td>
-      <td width="80"  > Quantity</td>
+      <td width="60" >Unit</td>
+      <td width="80" >Total Weight</td>
       <td width="80" >Price(USD)</td>
       <td width="150">Amount(USD)</td>
       <td >Package</td>
@@ -141,7 +141,7 @@ p.western {
           <td > ${item.productCode} </td>
           <td >${item.productName} </td>
           <td > $!{item.unitName} </td>
-          <td > ${item.quantity} </td>
+          <td > $!{item.totalWeight} </td>
           <td > ${item.price}</td>
           <td > ${item.amount} </td>
           <td > $!{item.packageWeight} </td>
