--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -34,10 +34,10 @@
 .maxlatest .sign-content input[type="text"],.maxlatest .sign-content input[type="password"],.maxlatest .sign-content .btn{height: 40px; line-height: 40px; padding:0;}
 
 .maxlatest .bansearch{position: absolute; top:50%; left: 11%; z-index: 3; width: 32%; max-width: 690px; color: #fff; -webkit-transform: translate(0,-50%); transform: translate(0,-50%);}
-.maxlatest .bansearch form{position: relative;  margin: 20px 0;}
-.maxlatest .bansearch .maxicon-search{background-position: 0 -218px; position: absolute; top:0; right: 0; height: 50px; width: 50px;}
+.maxlatest .bansearch form{position: relative;  margin-top: 20px;}
+.maxlatest .bansearch .maxicon-search{background-position: 0 -218px; position: absolute; top:0; right: 0; z-index: 9; height: 50px; width: 50px;}
 .maxlatest .bansearch p{font-size: 42px; text-transform: uppercase; font-weight: bold; line-height: 1.0em;}
-.maxlatest .bansearch span{position: absolute; right:0; top:0; z-index: 9; width: 60px; height: 50px;line-height: 50px; font-size: 16px; color: #999 }
+.maxlatest .bansearch span{line-height: 50px; font-size: 16px; cursor:pointer;}
 .maxlatest .bansearch .btn{height: 50px;}
 .maxlatest .bansearch .input-group{width: 100%}
 
