--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
@@ -1,10 +1,11 @@
 *{padding:0; margin:0; list-style-type: none; box-sizing: border-box; outline: none; font-family: Tahoma, 'Geneva', sans-serif; font-style: normal; }
 h1,h2,h3,h4,b{font-weight: normal;}
-body{background:#fff;-webkit-text-size-adjust:100%;min-width: 1200px;font-family: Tahoma, Geneva, sans-serif; font-size: 1.2rem;font-style: normal;font-size: 100%\9;-webkit-font-smoothing: subpixel-antialiased} 
+body{background:#fff;-webkit-text-size-adjust:100%;min-width: 1200px; max-width: 1920px; margin:auto; font-family: Tahoma, Geneva, sans-serif; font-size: 1.1rem;font-style: normal;font-size: 100%\9;-webkit-font-smoothing: subpixel-antialiased} 
 a{color:#333;text-decoration:none} 
 
 img{
 	max-width: 100%;
+	max-height: 100%;
 }
 
 table{
@@ -17,6 +18,7 @@ input[type='checkbox']{
 }
 input[type='checkbox']:checked~.checkbox:before{
 	background-color: #096735;
+	border:none;
 }
 input[type='checkbox']:checked~.checkbox:after{
 	display:block;
@@ -31,6 +33,7 @@ input[type='text'],input[type='number'], input[type='password'] ,input[type='sub
 	color: #999;
 	border:1px solid #ddd;
 	cursor:pointer;
+	font-weight: normal;
 }
 
 input[type='submit']{
@@ -127,8 +130,8 @@ button{
     cursor:pointer
     }
 
-.product-table .maxmark , .maxon_salesul .maxmark , .m-prodslide .maxmark{position: absolute;top:-4px;right:-4px; z-index: 9; padding:8px;background-color: #096735;color: #fff;border-bottom-left-radius: 1rem; line-height: 1em; font-size: 16px;}
-.product-table .maxmark h3 ,.maxon_salesul .maxmark h3 , .m-prodslide .maxmark h3{font-size: 1.4rem;font-weight: normal;float: left;}
+.product-table .maxmark , .maxon_salesul .maxmark , .m-prodslide .maxmark{position: absolute;top:-4px;right:-4px; z-index: 9; padding:8px;background-color: #096735;color: #fff;border-bottom-left-radius: 1.6rem; line-height: 1em; font-size: 16px;}
+.product-table .maxmark h3 ,.maxon_salesul .maxmark h3 , .m-prodslide .maxmark h3{margin:0; font-size: 1.4rem;font-weight: normal;float: left;}
 .product-table .maxmark p , .maxon_salesul .maxmark p  , .m-prodslide .maxmark p{float: left;}
 .product-table .maxmark p em , .maxon_salesul .maxmark em  , .m-prodslide .maxmark em{display: block;margin-left: 4px; line-height: 1em;font-size: .6rem;color: #fff;}
 
@@ -152,7 +155,7 @@ button{
 .maxon_sales .maxpagin_tit a{font-size:16px;}
 .maxsales_but{font-size: 1rem;padding: 14px 30px;border: 3px solid #fff;display: inline-block;color: #fff;}
 /*top*/
-.maxprosi-top{background: #096735;height: 80px;position: absolute; top:-80px; left: 0;z-index: 9; }
+.maxprosi-top{background: #096735;height: 80px;position: relative; z-index: 9; transition:all 500ms; overflow:hidden;}
 .maxcomment a{color: #fff;font-size: 18px;line-height:50px;}
 .maxcomment{height: 50px;width:596px;margin: 0px auto;overflow: hidden;position: relative;top: 16px;border: 1px #074d27 dashed;}
 .maxcomment ul{padding: 0 60px 0 65px;}
@@ -169,16 +172,10 @@ button{
 .maxtop:after{content:''; display: block;  clear: both;}
 .maxtop .maxLogo , .maxtop .maxmenu , .maxtop_rig{display: table-cell; vertical-align: middle; padding:10px 0;}
 .maxtop .maxLogo{width:15%;}
-<<<<<<< Updated upstream
-.maxtop .maxLogo a{display:block; height: 60px; }
-.maxtop .maxLogo img{width: auto; height: 100%;}
-.maxtop .maxmenu{width: 70%; }
-=======
 .maxtop .maxLogo a img{height: 60px; width: auto;}
 .maxtop .maxLogo a{display:block; }
 .maxtop .maxmenu{width: 65%; }
 .maxtop .maxmenu ul:after{content:''; display: block; clear:both;}
->>>>>>> Stashed changes
 .maxtop .maxmenu li{position: relative; z-index: 999; float:left;text-align:center;margin-left: 20px; }
 .maxtop .maxmenu li a{ font-size: 1rem; line-height: 60px; display: block;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 .maxtop .maxmenu li.hover a,.maxtop .maxmenu li:hover a{color:#096735;}
@@ -188,16 +185,19 @@ button{
 .maxtop .maxmenu li ul li a{line-height: 2em; text-align: left; }
 .maxtop .maxmenu li:hover ul li a , .maxtop .maxmenu li.hover ul li a{font-size: 14px;color: #333;font-weight: 500;}
 .maxtop .maxmenu li ul li:hover a{color: #096735}
-.maxtop_rig{ width:15%; text-align: right; position: relative;}
-.maxtop_rig li{display: inline-table;padding-left: 15px; position: relative;}
+.maxtop_rig{ width:20%; text-align: right; position: relative;}
+.maxtop_rig li{display: inline-table; padding-left: 15px; min-height: 30px; min-width: 30px; position: relative;vertical-align: top; }
 .maxtop_rig a , .searchlist .btn-submit , .maxlatest .bansearch .maxicon-search{border:none; background: url(maxicon.png);width: 30px;height: 30px;display: block;}
-.maxtop_rig a.maxicon-user{background-position: -10px -172px;}
+.maxtop_rig a.maxicon-user{background-position: -10px -172px; display:  table-cell;}
 .maxtop_rig a.maxicon-search , .searchlist .btn-submit{background-position: -10px -227px;}
 .maxtop_rig a.maxicon-cart{background-position: -10px -283px;position: relative;}
 .maxtop_rig a.maxicon-cart em{position: absolute;font-size: 12px;width: 18px;height: 18px;line-height: 18px;text-align: center;border-radius: 50%;right: -5px;background: #096735;color: #fff;}
-.maxtop_rig .userintro{position: absolute; left: -70px; color: #999; font-size: 14px; }
-.maxtop_rig .userintro button{color: #096735; display: inline; border:none; background: transparent; text-align: right; font-size: 14px; }
-.maxtop_rig .userintro button:after{content:''; display: block; position: absolute; bottom:-2px; right: 0; width: 20px; border-top:1px solid #096735; }
+.maxtop_rig .userintro{ color: #999; font-size: 14px; display: table-cell; line-height: 1em; text-align: right: ;}
+.maxtop_rig .userintro button{position: relative; display: inline; border:none; background: transparent; text-align: right; color: #096735; font-size: 12px; line-height: 1.5em;}
+.maxtop_rig .userintro button:after{content:'';  position: absolute; bottom:-2px; right: 0; width: 40px; border-top:1px solid #096735; }
+.maxtop_rig .bansearch{position: absolute; top:0; right: 0; background:#eee; width: 200px; }
+.maxtop_rig .bansearch .form-control{height: 30px; line-height: 30px; background: transparent; border:none; box-shadow: none; font-size: 12px; }
+.maxtop_rig .bansearch .input-group-btn .btn{padding:0; width: 40px; height: 30px; color: #999}
 
 /*searchlist*/
 .searchlist{position: absolute; top:20px; right: 42px; z-index: 9999; width: 200%; max-width: 350px; display: none;}
@@ -220,7 +220,8 @@ button{
 /*footer*/
 .footer{background: #222624;color: #666666;font-size: 14px;}
 .footer .container{width: 90%;margin: 0 auto;}
-.footer .maxadd{width: 36%;padding-right: 4%; float: left;}
+.footer .maxadd{width: 27%; float: left;}
+.footer .maxadd ul{padding:0;}
 .footer .maxadd li{position:relative; padding-bottom: 12px; display: block; }
 .footer .maxadd i{display: block;width: 20px;h;height: 20px;position: absolute;top:0;background: url(maxicon.png);}
 .footer .maxadd i.maxadd{background-position: -13px -347px;}
@@ -228,12 +229,16 @@ button{
 .footer .maxadd .maxphone{background-position: -13px -406px;}
 .footer .maxadd .maxemail{background-position: -13px -434px;}
 .footer .maxadd span{margin-left: 26px; display: block;}
-.footermin{padding: 60px 0 58px; position: relative;}
-.footermin .left{width: 80%;}
+.footermin{padding:80px 0 58px; position: relative;}
+.footermin .left{width: 92%; margin:auto;}
 .footermin .left:after{content:''; display: block; clear:both;}
-.footermin .right{width: 20%; position: absolute; top:60px; right: 0}
+.footermin .right{width: 100%; position: absolute; top:30px; left:0}
 .footermin h3{font-size: 20px;color: #fff;padding-bottom: 26px;}
-.footer .maxfootnav{float: left; padding-right:6%;}
+.footer .maxfootnav{float: left; }
+.footer .maxfootnav{
+	padding-left:15%;
+}
+.footer .maxfootnav ul{padding:0;}
 .footer .maxfootnav a{color: #666;display: block;padding-bottom: 12px;}
 .footer .maxfootnav a:hover{color:#fff;}
 
@@ -241,14 +246,16 @@ button{
 .gotop:after{content:''; display: block; height: 100%;  background:url(maxicon.png) no-repeat center 72.3%;}
 .gotop:hover{background: rgb(9,103,53)}
 
-.footerbot{padding: 21px 0;border-top: 1px solid #1e211f;}
+.footerbot{padding: 21px 0;border-top: 1px solid #1e211f; text-align: center;}
 ul.share-buttons{
   list-style: none;
   padding: 0;
+  text-align: center;
 }
 
 ul.share-buttons li{
-  float: right;margin-left: 12px;
+   display: inline-block;
+   margin:0 6px;
 }
 ul.share-buttons .sr-only{
   position: absolute;
@@ -342,6 +349,9 @@ ul.share-buttons .sr-only{
 	display: none;
 }
 
+.col-md-6 #loginForm{
+	padding-bottom: 60px;
+}
 
 /*media*/
 @media screen and (max-width: 1200px) {
