--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-proforma-invoiceBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-proforma-invoiceBody.vm
@@ -146,7 +146,7 @@ p.western {
     <tr>
       <td width="67" height="7">Marks Numberse</td>
       <td width="236">Product name</td>
-      <td width="82">Quantity<br> (Kg)</td>
+      <td width="82">Total Weight<br> (Kg)</td>
       <td width="51"> Unit Price<br>(USD)</td>
       <td width="58"> Amount<br>(USD)</td>
     </tr>
@@ -154,7 +154,7 @@ p.western {
 		<tr>
 		  <td width="67" height="7"> N/M </td>
 		  <td width="206" > ${entry.product.name} </td>
-		  <td width="82" > ${entry.quantity} </td>
+		  <td width="82" > ${entry.totalWeight} </td>
 		  <td width="51" > ${entry.basePrice.formattedValue} </td>
 		  <td width="58" > ${entry.totalPrice.formattedValue} </td>
 		</tr>
