--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-E.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-E.vm
@@ -98,7 +98,7 @@ p.western {
     </tr>
     #set ($formattedOrderDate = $ctx.order.waitDeliveiedDate)
     <tr>
-      <td>DATE: ${formattedOrderDate}</td>
+      <td>DATE: $!{formattedOrderDate}</td>
       <td>&nbsp;</td>
     </tr>
     
@@ -349,7 +349,7 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>DATE:  ${formattedOrderDate}</td>
+      <td>DATE:  $!{formattedOrderDate}</td>
       <td>&nbsp;</td>
     </tr>
     
