--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
@@ -97,7 +97,7 @@ p.western {
     </tr>
 	#set ($formattedOrderDate = $ctx.order.waitDeliveiedDate)
     <tr>
-      <td>DATE: ${formattedOrderDate}</td>
+      <td>DATE: $!{formattedOrderDate}</td>
       <td>&nbsp;</td>
     </tr>
     
@@ -322,7 +322,7 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>DATE:  ${formattedOrderDate}</td>
+      <td>DATE:  $!{formattedOrderDate}</td>
       <td>&nbsp;</td>
     </tr>
     
