--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -344,13 +344,13 @@ textarea{
 /*maxpop*/
 .maxpop , .delpop,.maxfixed-bg{
 	display: none;
-	position: fixed;
+	/*position: fixed;
 	top:50%;
-	left:50%;
+	left:50%;*/
 	z-index: 999;
 	padding:20px 40px;
-	-webkit-transform:translate(-50%,-50%);
-	transform:translate(-50%,-50%);
+	/*-webkit-transform:translate(-50%,-50%);
+	transform:translate(-50%,-50%);*/
 	color: #fff;
 	background-color: rgba(0,26,15,.7);
 }
@@ -2093,7 +2093,6 @@ display: inline-table;
 }
 
 .gal-centent .slide-item .aitem .img{
-	display: table;
 	width: 100%;
 	min-height: 220px;
 	line-height: 1em;
@@ -2101,7 +2100,9 @@ display: inline-table;
 	text-align: center;
 }
 .gal-centent .slide-item .aitem .img a{
-	display: table-cell;
+	display: inline-block;
+	*display: inline;
+	zoom:1;
 	height: 100%;
 	vertical-align: middle;
 }
@@ -2187,13 +2188,14 @@ display: inline-table;
 	padding-bottom: 40px;
 }
 .maxfixed{
-	position: fixed;
+	/*position: fixed;
 	padding-top: 4%;
 	top: 50%;
 	left: 50%;
 	padding: 0px;
 	-webkit-transform: translate(-50%,-50%);
 	transform: translate(-50%,-50%);
+	*/
 }
 .maxfixed .cart-total{
 	width: 500px;
@@ -2927,13 +2929,13 @@ display: inline-table;
 	background-color: rgba(0,26,15,.7);
 }
 .m-message .indwrap , .maxfixed .indwrap{ 
-	position: absolute;
+	/*position: absolute;
 	left: 0;
-	top:0;
+	top:0;*/
 	padding:10% 0;
 	width: 100%;
 	height: 100%;
-	overflow: scroll;
+	/*overflow: scroll;*/
 }
 .m-message .title{
 	text-align: center;
@@ -3034,3 +3036,7 @@ display: inline-table;
 }
 
 
+/*补充style.css*/
+#cboxWrapper{width: 100%;}
+#cboxLoadedContent{padding:0; margin:0;}
+#cboxContent{background-color:transparent}
