--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -195,9 +195,9 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
    .sign-content .label-title{
     margin-bottom: 6px;
    }
-   .footer .maxfootnav{
+   /*.footer .maxfootnav{
         padding-left: 13%;
-   }
+   }*/
    .maxlatest .bansearch{
         width:37%
     }
@@ -281,9 +281,9 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
   .maxmean .meansale p, .maxmean p, .maxmean .textmessge p{
     font-size: 16px;
   }
-  .footer .maxfootnav{
+  /*.footer .maxfootnav{
         padding-left: 12%;
-   }
+   }*/
   
 }
 
