--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
@@ -219,8 +219,8 @@ button{
 
 /*footer*/
 .footer{background: #222624;color: #666666;font-size: 14px;}
-.footer .container{width: 90%;margin: 0 auto;}
-.footer .maxadd{width: 27%; float: left;}
+.footer .container{width: 1200px;margin: 0 auto;}
+.footer .maxadd{width: 27%;  float: left;}
 .footer .maxadd ul{padding:0;}
 .footer .maxadd li{position:relative; padding-bottom: 12px; display: block; }
 .footer .maxadd i{display: block;width: 20px;h;height: 20px;position: absolute;top:0;background: url(maxicon.png);}
@@ -234,9 +234,9 @@ button{
 .footermin .left:after{content:''; display: block; clear:both;}
 .footermin .right{width: 100%; position: absolute; top:30px; left:0}
 .footermin h3{font-size: 20px;color: #fff;padding-bottom: 26px;}
-.footer .maxfootnav{float: left; }
 .footer .maxfootnav{
-	padding-left:15%;
+	float: left;
+	padding-left:170px;
 }
 .footer .maxfootnav ul{padding:0;}
 .footer .maxfootnav a{color: #666;display: block;padding-bottom: 12px;}
